[package]
name = "jazz"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = "0.36.0"
wasi = "0.13.2"
rquickjs = "0.8.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[features]
default = ["macro"]
macro = ["rquickjs/macro"]